--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,14 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
 
     defaultConfig {
         applicationId "com.futuraeducation"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -149,14 +149,14 @@ dependencies {
     implementation 'com.budiyev.android:code-scanner:2.1.0'
 
     //retrofit for api call
-    implementation('com.squareup.retrofit2:retrofit:2.6.0') {
+    implementation('com.squareup.retrofit2:retrofit:2.9.0') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+    implementation 'com.google.code.gson:gson:2.8.7'
     compileOnly 'org.checkerframework:checker-qual:' + checkerframeworkVersion
     implementation("com.google.android.exoplayer:extension-cronet:2.15.0")
     implementation 'com.amazonaws:aws-android-sdk-s3:2.29.0'
@@ -167,7 +167,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
 
     //Coroutine library
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")
 
     implementation 'com.google.android.play:core:1.10.2'
 
