--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://www.jitpack.io' }
         jcenter()
     }
     dependencies {
@@ -20,11 +21,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
-        maven { url  'https://dl.bintray.com/sysdata/maven' }
-        maven { url 'http://repo.pageturner-reader.org' }
+        google()
+        maven { url 'https://www.jitpack.io' }
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
